--- a/config/components/manager/kustomization.yaml
+++ b/config/components/manager/kustomization.yaml
@@ -13,5 +13,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: gcr.io/k8s-staging-jobset/jobset
+  newName: us-central1-docker.pkg.dev/k8s-staging-images/jobset/jobset
   newTag: main
