--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
     entrypoint: make
     args:
       - image-push
-      #- helm-chart-push
+      - helm-chart-push
     env:
     - IMAGE_REGISTRY=us-central1-docker.pkg.dev/k8s-staging-images/jobset
     - GIT_TAG=$_GIT_TAG
