add required flag for replicated jobs

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9077,6 +9077,8 @@ spec:
                 format: int32
                 minimum: 0
                 type: integer
+            required:
+            - replicatedJobs
             type: object
             x-kubernetes-validations:
             - message: StartupPolicy and DependsOn APIs are mutually exclusive
