--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -239,7 +239,7 @@ spec:
                         rule: self == oldSelf
                     groupName:
                       default: default
-                      description: GrouName defines the name of the group this ReplicatedJob
+                      description: GroupName defines the name of the group this ReplicatedJob
                         belongs to. Defaults to "default"
                       type: string
                     name:
