Set readOnlyRootFilesystem explicitly to true

--- a/charts/jobset/values.yaml
+++ b/charts/jobset/values.yaml
@@ -58,6 +58,7 @@ controller:
   # -- Security context of the jobset controller container.
   securityContext:
     allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: true
     capabilities:
       drop:
         - ALL
