Add bash script to sync manifests from Helm chart to Kustomize
Signed-off-by: Yi Chen <github@chenyicn.net>

--- a/charts/jobset/templates/prometheus/service_monitor.yaml
+++ b/charts/jobset/templates/prometheus/service_monitor.yaml
@@ -31,4 +31,9 @@ spec:
       {{- include "jobset.controller.selectorLabels" . | nindent 6 }}
   endpoints:
   - port: metrics
+    path: /metrics
+    scheme: https
+    bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    tlsConfig:
+      insecureSkipVerify: true
 {{- end }}
