--- a/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
+++ b/charts/jobset/crds/jobset.x-k8s.io_jobsets.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.2
+    controller-gen.kubebuilder.io/version: v0.17.2
   name: jobsets.jobset.x-k8s.io
 spec:
   group: jobset.x-k8s.io
@@ -237,6 +237,11 @@ spec:
                       x-kubernetes-validations:
                       - message: Value is immutable
                         rule: self == oldSelf
+                    groupName:
+                      default: default
+                      description: GroupName defines the name of the group this ReplicatedJob
+                        belongs to. Defaults to "default"
+                      type: string
                     name:
                       description: |-
                         Name is the name of the entry and will be used as a suffix
