--- a/config/components/manager/kustomization.yaml
+++ b/config/components/manager/kustomization.yaml
@@ -1,17 +1,4 @@
 resources:
-- manager.yaml
-
-generatorOptions:
-  disableNameSuffixHash: true
-
-configMapGenerator:
-- files:
-  - controller_manager_config.yaml
-  name: manager-config
-
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-images:
-- name: controller
-  newName: us-central1-docker.pkg.dev/k8s-staging-images/jobset/jobset
-  newTag: main
+  - namespace.yaml
+  - deployment.yaml
+  - configmap.yaml
