--- a/config/components/webhook/kustomization.yaml
+++ b/config/components/webhook/kustomization.yaml
@@ -1,20 +1,7 @@
 resources:
-- manifests.yaml
 - service.yaml
+- mutating_webhook_configuration.yaml
+- validating_webhook_configuration.yaml
 
 configurations:
 - kustomizeconfig.yaml
-
-patches:
-- path: patches/mutating-patch.yaml
-  target:
-    group: admissionregistration.k8s.io
-    version: v1
-    kind: MutatingWebhookConfiguration
-    name: mutating-webhook-configuration
-- path: patches/validating-patch.yaml
-  target:
-    group: admissionregistration.k8s.io
-    version: v1
-    kind: ValidatingWebhookConfiguration
-    name: validating-webhook-configuration
