--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -42,6 +42,13 @@ patchesStrategicMerge:
 # 'CERTMANAGER' needs to be enabled to use ca injection
 #- webhookcainjection_patch.yaml
 
+#  Uncomment the patches line if you enable Metrics and CertManager
+# [METRICS WITH CERTMANGER] To enable metrics protected with certmanager, uncomment the following line.
+# This patch will protect the metrics with certmanager self-signed certs.
+#- certmanager_metrics_manager_patch.yaml
+
+# [PROMETHEUS WITH CERTMANAGER] to enable prometheus with certmanager, ../prometheus dir should be configured
+
 # the following config is for teaching kustomize how to do var substitution
 #vars:
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER' prefix.
@@ -71,3 +78,15 @@ patchesStrategicMerge:
 #    kind: Service
 #    version: v1
 #    name: webhook-service
+#- name: METRICS_SERVICE_NAMESPACE # namespace of the service
+#  objref:
+#    kind: Service
+#    version: v1
+#    name: controller-manager-metrics-service
+#  fieldref:
+#    fieldpath: metadata.namespace
+#- name: METRICS_SERVICE_NAME
+#  objref:
+#    kind: Service
+#    version: v1
+#    name: controller-manager-metrics-service
