--- a/config/components/certmanager/certificate_metrics.yaml
+++ b/config/components/certmanager/certificate_metrics.yaml
@@ -5,12 +5,12 @@ kind: Certificate
 metadata:
   labels:
     app.kubernetes.io/name: certificate
-    app.kubernetes.io/instance: metrics-certs
+    app.kubernetes.io/instance: metrics-cert
     app.kubernetes.io/component: certificate
     app.kubernetes.io/created-by: jobset
     app.kubernetes.io/part-of: jobset
     app.kubernetes.io/managed-by: kustomize
-  name: metrics-certs  # this name should match the one appeared in kustomizeconfig.yaml
+  name: metrics-cert  # this name should match the one appeared in kustomizeconfig.yaml
   namespace: system
 spec:
   # METRICS_SERVICE_NAME and METRICS_SERVICE_NAMESPACE will be substituted by kustomize
