fix and better document METRICS WITH CERTMANGER in kustomize

--- a/config/components/manager/controller_manager_config.yaml
+++ b/config/components/manager/controller_manager_config.yaml
@@ -3,3 +3,5 @@ apiVersion: config.jobset.x-k8s.io/v1alpha1
 kind: Configuration
 leaderElection:
   leaderElect: true
+internalCertManagement:
+  enable: true
