Fix typo in JobSetStatus.TeminalState docs.

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9211,7 +9211,7 @@ spec:
               terminalState:
                 description: |-
                   TerminalState the state of the JobSet when it finishes execution.
-                  It can be either Complete or Failed. Otherwise, it is empty by default.
+                  It can be either Completed or Failed. Otherwise, it is empty by default.
                 type: string
             type: object
         type: object
