add support for indirect dependencies with dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    allow:
+      - dependency-type: "indirect"
     labels:
       - "ok-to-test"
     groups:
