simplify certificate commonNames to comply with length limits

--- a/charts/jobset/templates/certmanager/certificate.yaml
+++ b/charts/jobset/templates/certmanager/certificate.yaml
@@ -32,7 +32,7 @@ spec:
   {{- else }}
     {{- toYaml .Values.certManager.issuerRef | nindent 4 }}
   {{- end }}
-  commonName: {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc
+  commonName: {{ include "jobset.name" . }}-webhook
   dnsNames:
   - {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc
   - {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc.cluster.local
