--- a/config/components/certmanager/certificate_metrics.yaml
+++ b/config/components/certmanager/certificate_metrics.yaml
@@ -17,7 +17,7 @@ spec:
   dnsNames:
     - $(METRICS_SERVICE_NAME).$(METRICS_SERVICE_NAMESPACE).svc
     - $(METRICS_SERVICE_NAME).$(METRICS_SERVICE_NAMESPACE).svc.cluster.local
-  commonName: $(METRICS_SERVICE_NAME).$(METRICS_SERVICE_NAMESPACE).svc
+  commonName: jobset-metrics
   duration: 8760h
   renewBefore: 720h
   usages:
