--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -229,6 +229,7 @@ spec:
                         - name
                         - status
                         type: object
+                      maxItems: 16
                       type: array
                       x-kubernetes-list-map-keys:
                       - name
