Enable TLS metrics (#863)
* enable TLS metrics

* add CertDir configuration to controller metrics

* enable TLS metrics in helm charts

* update prometheus service in helm to reflect reality

* add rbac for prometheus-k8s in helm

* add expiration/renewal and commonName to kustomize certificates

* use correct labels in metrics service so it can be queried by prometheus

* document METRICS_PROMETHEUS_CLIENT_CERT_SECRET_NAME variable

* fix and better document METRICS WITH CERTMANGER in kustomize

* enable monitoring service by default in helm charts

* make helm-docs

* create metrics service by default

* simplify certificate commonNames to comply with length limits

--- a/charts/jobset/templates/certmanager/certificate_metrics.yaml
+++ b/charts/jobset/templates/certmanager/certificate_metrics.yaml
@@ -18,24 +18,24 @@ limitations under the License.
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ include "jobset.certManager.certificate.name" . }}
+  name: {{ include "jobset.certManager.metricsCertificate.name" . }}
   namespace: {{ .Release.Namespace}}
   labels:
     {{- include "jobset.labels" . | nindent 4 }}
 spec:
-  secretName: {{ include "jobset.webhook.secret.name" . }}
+  secretName: {{ include "jobset.metrics.secret.name" . }}
   issuerRef:
-  {{- if not .Values.certManager.issuerRef }}
+  {{- with .Values.certManager.issuerRef }}
+    {{ toYaml . | nindent 4 }}
+  {{- else }}
     group: cert-manager.io
     kind: Issuer
     name: {{ include "jobset.certManager.issuer.name" . }}
-  {{- else }}
-    {{- toYaml .Values.certManager.issuerRef | nindent 4 }}
   {{- end }}
-  commonName: {{ include "jobset.name" . }}-webhook
+  commonName: {{ include "jobset.name" . }}-metrics
   dnsNames:
-  - {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc
-  - {{ include "jobset.webhook.service.name" . }}.{{ .Release.Namespace }}.svc.cluster.local
+  - {{ include "jobset.metrics.service.name" . }}.{{ .Release.Namespace }}.svc
+  - {{ include "jobset.metrics.service.name" . }}.{{ .Release.Namespace }}.svc.cluster.local
   duration: 8760h
   renewBefore: 720h
   usages:
