--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
 # crd/kustomization.yaml
 - ../components/webhook
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'. 'WEBHOOK' components are required.
+# - ../components/certmanager
 - ../components/internalcert
 # [PROMETHEUS] To enable prometheus monitor, uncomment all sections with 'PROMETHEUS'.
 #- ../prometheus
@@ -41,6 +42,13 @@ patchesStrategicMerge:
 # Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
 # 'CERTMANAGER' needs to be enabled to use ca injection
 #- webhookcainjection_patch.yaml
+
+#  Uncomment the patches line if you enable Metrics and CertManager
+# [METRICS WITH CERTMANGER] To enable metrics protected with certmanager, uncomment the following line.
+# This patch will protect the metrics with certmanager self-signed certs.
+#- certmanager_metrics_manager_patch.yaml
+
+# [PROMETHEUS WITH CERTMANAGER] to enable prometheus with certmanager, ../prometheus dir should be configured
 
 # the following config is for teaching kustomize how to do var substitution
 #vars:
@@ -71,3 +79,15 @@ patchesStrategicMerge:
 #    kind: Service
 #    version: v1
 #    name: webhook-service
+#- name: METRICS_SERVICE_NAMESPACE # namespace of the service
+#  objref:
+#    kind: Service
+#    version: v1
+#    name: controller-manager-metrics-service
+#  fieldref:
+#    fieldpath: metadata.namespace
+#- name: METRICS_SERVICE_NAME
+#  objref:
+#    kind: Service
+#    version: v1
+#    name: controller-manager-metrics-service
