fix(apis): set maxItems of DependsOn to 5.
Signed-off-by: Electronic-Waste <2690692950@qq.com>

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -229,10 +229,14 @@ spec:
                         - name
                         - status
                         type: object
+                      maxItems: 5
                       type: array
                       x-kubernetes-list-map-keys:
                       - name
                       x-kubernetes-list-type: map
+                      x-kubernetes-validations:
+                      - message: Value is immutable
+                        rule: self == oldSelf
                     groupName:
                       default: default
                       description: GroupName defines the name of the group this ReplicatedJob
