update kubernetes to 0.33

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -308,8 +308,6 @@ spec:
                                 batch.kubernetes.io/job-index-failure-count annotation. It can only
                                 be set when Job's completionMode=Indexed, and the Pod's restart
                                 policy is Never. The field is immutable.
-                                This field is beta-level. It can be used when the `JobBackoffLimitPerIndex`
-                                feature gate is enabled (enabled by default).
                               format: int32
                               type: integer
                             completionMode:
@@ -385,8 +383,6 @@ spec:
                                 It can only be specified when backoffLimitPerIndex is set.
                                 It can be null or up to completions. It is required and must be
                                 less than or equal to 10^4 when is completions greater than 10^5.
-                                This field is beta-level. It can be used when the `JobBackoffLimitPerIndex`
-                                feature gate is enabled (enabled by default).
                               format: int32
                               type: integer
                             parallelism:
@@ -429,8 +425,6 @@ spec:
                                             running pods are terminated.
                                           - FailIndex: indicates that the pod's index is marked as Failed and will
                                             not be restarted.
-                                            This value is beta-level. It can be used when the
-                                            `JobBackoffLimitPerIndex` feature gate is enabled (enabled by default).
                                           - Ignore: indicates that the counter towards the .backoffLimit is not
                                             incremented and a replacement pod is created.
                                           - Count: indicates that the pod is handled in the default way - the
@@ -585,9 +579,6 @@ spec:
                                 only when the number of succeeded pods equals to the completions.
                                 When the field is specified, it must be immutable and works only for the Indexed Jobs.
                                 Once the Job meets the SuccessPolicy, the lingering pods are terminated.
-
-                                This field is beta-level. To use this field, you must enable the
-                                `JobSuccessPolicy` feature gate (enabled by default).
                               properties:
                                 rules:
                                   description: |-
@@ -990,7 +981,6 @@ spec:
                                                           pod labels will be ignored. The default value is empty.
                                                           The same key is forbidden to exist in both matchLabelKeys and labelSelector.
                                                           Also, matchLabelKeys cannot be set when labelSelector isn't set.
-                                                          This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                         items:
                                                           type: string
                                                         type: array
@@ -1005,7 +995,6 @@ spec:
                                                           pod labels will be ignored. The default value is empty.
                                                           The same key is forbidden to exist in both mismatchLabelKeys and labelSelector.
                                                           Also, mismatchLabelKeys cannot be set when labelSelector isn't set.
-                                                          This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                         items:
                                                           type: string
                                                         type: array
@@ -1178,7 +1167,6 @@ spec:
                                                       pod labels will be ignored. The default value is empty.
                                                       The same key is forbidden to exist in both matchLabelKeys and labelSelector.
                                                       Also, matchLabelKeys cannot be set when labelSelector isn't set.
-                                                      This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                     items:
                                                       type: string
                                                     type: array
@@ -1193,7 +1181,6 @@ spec:
                                                       pod labels will be ignored. The default value is empty.
                                                       The same key is forbidden to exist in both mismatchLabelKeys and labelSelector.
                                                       Also, mismatchLabelKeys cannot be set when labelSelector isn't set.
-                                                      This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                     items:
                                                       type: string
                                                     type: array
@@ -1367,7 +1354,6 @@ spec:
                                                           pod labels will be ignored. The default value is empty.
                                                           The same key is forbidden to exist in both matchLabelKeys and labelSelector.
                                                           Also, matchLabelKeys cannot be set when labelSelector isn't set.
-                                                          This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                         items:
                                                           type: string
                                                         type: array
@@ -1382,7 +1368,6 @@ spec:
                                                           pod labels will be ignored. The default value is empty.
                                                           The same key is forbidden to exist in both mismatchLabelKeys and labelSelector.
                                                           Also, mismatchLabelKeys cannot be set when labelSelector isn't set.
-                                                          This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                         items:
                                                           type: string
                                                         type: array
@@ -1555,7 +1540,6 @@ spec:
                                                       pod labels will be ignored. The default value is empty.
                                                       The same key is forbidden to exist in both matchLabelKeys and labelSelector.
                                                       Also, matchLabelKeys cannot be set when labelSelector isn't set.
-                                                      This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                     items:
                                                       type: string
                                                     type: array
@@ -1570,7 +1554,6 @@ spec:
                                                       pod labels will be ignored. The default value is empty.
                                                       The same key is forbidden to exist in both mismatchLabelKeys and labelSelector.
                                                       Also, mismatchLabelKeys cannot be set when labelSelector isn't set.
-                                                      This is a beta field and requires enabling MatchLabelKeysInPodAffinity feature gate (enabled by default).
                                                     items:
                                                       type: string
                                                     type: array
@@ -1847,6 +1830,7 @@ spec:
                                             items:
                                               description: EnvFromSource represents
                                                 the source of a set of ConfigMaps
+                                                or Secrets
                                               properties:
                                                 configMapRef:
                                                   description: The ConfigMap to select
@@ -1868,9 +1852,9 @@ spec:
                                                   type: object
                                                   x-kubernetes-map-type: atomic
                                                 prefix:
-                                                  description: An optional identifier
-                                                    to prepend to each key in the
-                                                    ConfigMap. Must be a C_IDENTIFIER.
+                                                  description: Optional text to prepend
+                                                    to the name of each environment
+                                                    variable. Must be a C_IDENTIFIER.
                                                   type: string
                                                 secretRef:
                                                   description: The Secret to select
@@ -2147,6 +2131,12 @@ spec:
                                                     - port
                                                     type: object
                                                 type: object
+                                              stopSignal:
+                                                description: |-
+                                                  StopSignal defines which signal will be sent to a container when it is being stopped.
+                                                  If not specified, the default is defined by the container runtime in use.
+                                                  StopSignal can only be set for Pods with a non-empty .spec.os.name
+                                                type: string
                                             type: object
                                           livenessProbe:
                                             description: |-
@@ -3414,6 +3404,7 @@ spec:
                                             items:
                                               description: EnvFromSource represents
                                                 the source of a set of ConfigMaps
+                                                or Secrets
                                               properties:
                                                 configMapRef:
                                                   description: The ConfigMap to select
@@ -3435,9 +3426,9 @@ spec:
                                                   type: object
                                                   x-kubernetes-map-type: atomic
                                                 prefix:
-                                                  description: An optional identifier
-                                                    to prepend to each key in the
-                                                    ConfigMap. Must be a C_IDENTIFIER.
+                                                  description: Optional text to prepend
+                                                    to the name of each environment
+                                                    variable. Must be a C_IDENTIFIER.
                                                   type: string
                                                 secretRef:
                                                   description: The Secret to select
@@ -3711,6 +3702,12 @@ spec:
                                                     - port
                                                     type: object
                                                 type: object
+                                              stopSignal:
+                                                description: |-
+                                                  StopSignal defines which signal will be sent to a container when it is being stopped.
+                                                  If not specified, the default is defined by the container runtime in use.
+                                                  StopSignal can only be set for Pods with a non-empty .spec.os.name
+                                                type: string
                                             type: object
                                           livenessProbe:
                                             description: Probes are not allowed for
@@ -4794,7 +4791,7 @@ spec:
                                         Init containers may not have Lifecycle actions, Readiness probes, Liveness probes, or Startup probes.
                                         The resourceRequirements of an init container are taken into account during scheduling
                                         by finding the highest request/limit for each resource type, and then using the max of
-                                        of that value or the sum of the normal containers. Limits are applied to init containers
+                                        that value or the sum of the normal containers. Limits are applied to init containers
                                         in a similar fashion.
                                         Init containers cannot currently be added or removed.
                                         Cannot be updated.
@@ -4980,6 +4977,7 @@ spec:
                                             items:
                                               description: EnvFromSource represents
                                                 the source of a set of ConfigMaps
+                                                or Secrets
                                               properties:
                                                 configMapRef:
                                                   description: The ConfigMap to select
@@ -5001,9 +4999,9 @@ spec:
                                                   type: object
                                                   x-kubernetes-map-type: atomic
                                                 prefix:
-                                                  description: An optional identifier
-                                                    to prepend to each key in the
-                                                    ConfigMap. Must be a C_IDENTIFIER.
+                                                  description: Optional text to prepend
+                                                    to the name of each environment
+                                                    variable. Must be a C_IDENTIFIER.
                                                   type: string
                                                 secretRef:
                                                   description: The Secret to select
@@ -5280,6 +5278,12 @@ spec:
                                                     - port
                                                     type: object
                                                 type: object
+                                              stopSignal:
+                                                description: |-
+                                                  StopSignal defines which signal will be sent to a container when it is being stopped.
+                                                  If not specified, the default is defined by the container runtime in use.
+                                                  StopSignal can only be set for Pods with a non-empty .spec.os.name
+                                                type: string
                                             type: object
                                           livenessProbe:
                                             description: |-
@@ -7032,7 +7036,6 @@ spec:
                                               - Ignore: nodeAffinity/nodeSelector are ignored. All nodes are included in the calculations.
 
                                               If this value is nil, the behavior is equivalent to the Honor policy.
-                                              This is a beta-level feature default enabled by the NodeInclusionPolicyInPodTopologySpread feature flag.
                                             type: string
                                           nodeTaintsPolicy:
                                             description: |-
@@ -7043,7 +7046,6 @@ spec:
                                               - Ignore: node taints are ignored. All nodes are included.
 
                                               If this value is nil, the behavior is equivalent to the Ignore policy.
-                                              This is a beta-level feature default enabled by the NodeInclusionPolicyInPodTopologySpread feature flag.
                                             type: string
                                           topologyKey:
                                             description: |-
@@ -8070,7 +8072,7 @@ spec:
                                               The types of objects that may be mounted by this volume are defined by the container runtime implementation on a host machine and at minimum must include all valid types supported by the container image field.
                                               The OCI object gets mounted in a single directory (spec.containers[*].volumeMounts.mountPath) by merging the manifest layers in the same way as for container images.
                                               The volume will be mounted read-only (ro) and non-executable files (noexec).
-                                              Sub path mounts for containers are not supported (spec.containers[*].volumeMounts.subpath).
+                                              Sub path mounts for containers are not supported (spec.containers[*].volumeMounts.subpath) before 1.33.
                                               The field spec.securityContext.fsGroupChangePolicy has no effect on this volume type.
                                             properties:
                                               pullPolicy:
