--- a/config/components/manager/kustomization.yaml
+++ b/config/components/manager/kustomization.yaml
@@ -13,5 +13,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: us-central1-docker.pkg.dev/k8s-staging-images/jobset/jobset
-  newTag: main
+  newName: us-central1-docker.pkg.dev/carreter-gke-dev-2/dev-images/jobset
+  newTag: dev-2025-06-09-220819
