--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -123,6 +123,7 @@ spec:
                           - FailJobSet
                           - RestartJobSet
                           - RestartJobSetAndIgnoreMaxRestarts
+                          - RecreateJob
                           type: string
                         name:
                           description: |-
@@ -9150,6 +9151,14 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
+              individualJobRecreates:
+                additionalProperties:
+                  format: int32
+                  type: integer
+                description: |-
+                  IndividualJobRecreates tracks the number of times an individual Job within
+                  the JobSet has been recreated (i.e. in case of RecreateJob failure policy).
+                type: object
               replicatedJobsStatus:
                 description: ReplicatedJobsStatus track the number of JobsReady for
                   each replicatedJob.
