--- a/site/hugo.toml
+++ b/site/hugo.toml
@@ -158,3 +158,8 @@ ignoreFiles = []
     url = "https://kubernetes.slack.com/"
     icon = "fab fa-slack"
     desc = "Chat with other project developers"
+
+[module]
+proxy = "direct"
+[[module.imports]]
+path = "github.com/google/docsy"
