--- a/netlify.toml
+++ b/netlify.toml
@@ -6,15 +6,15 @@
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.148.1"
   NODE_VERSION = "20"
-  GO_VERSION = 1.24.4
+  GO_VERSION = "1.24.4"
 
 [context.production.environment]
   HUGO_VERSION = "0.148.1"
   HUGO_ENV = "production"
   NODE_VERSION = "20"
-  GO_VERSION = 1.24.4
+  GO_VERSION = "1.24.4"
 
 [context.branch-deploy.environment]
   HUGO_VERSION = "0.148.1"
   NODE_VERSION = "20"
-  GO_VERSION = 1.24.4
+  GO_VERSION = "1.24.4"
